sumo/tests/od2trips/errors/testsuite.od2trips
# Errors in options
false_options

# Format errors in read O/D-matrices
format

# Incomplete matrices (unknown districts)
incomplete


